// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly Mount 1`] = `
<App>
  <h1>
    Display Active Users Account Details
  </h1>
  <h3>
    Fetching Users...
  </h3>
  <Button
    label="button"
  >
    <div
      className="button-style"
      data-testid="button"
    >
      Hi 
      button
    </div>
  </Button>
  <h1>
     Basic Hook useState 
  </h1>
  <TestHook
    changeName={[Function]}
    name="Moe"
  >
    <div>
      <button
        onClick={[Function]}
      >
        State Change Button
      </button>
      <p>
        Initial State
      </p>
      <button
        onClick={[Function]}
      >
        Change Name
      </button>
      <p>
        Moe
      </p>
    </div>
  </TestHook>
  <h1>
     Basic Hook useContext
  </h1>
  <TestHookContext>
    <div>
      <button
        onClick={[Function]}
      >
        Change Text
      </button>
      <p>
        Some Text
      </p>
    </div>
  </TestHookContext>
</App>
`;

exports[`renders correctly Shallow 1`] = `
<Fragment>
  <h1>
    Display Active Users Account Details
  </h1>
  <h3>
    Fetching Users...
  </h3>
  <Button
    label="button"
  />
  <h1>
     Basic Hook useState 
  </h1>
  <TestHook
    changeName={[Function]}
    name="Moe"
  />
  <h1>
     Basic Hook useContext
  </h1>
  <ContextProvider
    value={
      Object {
        "changeTextProp": [Function],
        "stateProp": "Some Text",
      }
    }
  >
    <TestHookContext />
  </ContextProvider>
</Fragment>
`;
